--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="primary_color">#fe9e4a</color>
+    <color name="primary_color">#fff333</color>
     <color name="secondary_color">#4a83fe</color>
 </resources>
