--- a/app/src/main/res/layout/activity_web__view.xml
+++ b/app/src/main/res/layout/activity_web__view.xml
@@ -6,8 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Web_View">
+
     <WebView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:id="@+id/web_view"/>
+
 </LinearLayout>
