--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -30,40 +30,35 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TextView
                     android:id="@+id/judul_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="ini judul berita"
+                    android:fontFamily="sans-serif-medium"
                     android:maxLines="2"
-                    android:textStyle="bold"
                     android:textSize="15sp"
+                    android:textStyle="bold"
                     tools:ignore="MissingConstraints" />
+
                 <TextView
+                    android:id="@+id/content_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/content_view"
+                    android:fontFamily="sans-serif-medium"
                     android:maxLines="2"
-                    android:text="ini berita"
-                    app:layout_constraintTop_toBottomOf="@+id/judul_view"/>
-                <TextView
-                    android:text="sembuh"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/content_view"
-                    android:id="@+id/test_view"/>
+                    app:layout_constraintTop_toBottomOf="@+id/judul_view" />
 
                 <TextView
                     android:id="@+id/name_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="kompas"
+                    android:fontFamily="sans-serif-medium"
                     app:layout_constraintBottom_toBottomOf="parent" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/publishedAt_views"
-                    android:text="17-04-2020"
                     android:layout_marginLeft="3dp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
