--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ff8c06</color>
+    <color name="colorPrimaryDark">#ea8510</color>
+    <color name="colorAccent">#fffb00 </color>
     <color name="primary_color">#fff333</color>
     <color name="secondary_color">#4a83fe</color>
 </resources>
